--- a/src/renderer/components/Navbar/components/NotificationModal/styles.module.sass
+++ b/src/renderer/components/Navbar/components/NotificationModal/styles.module.sass
@@ -1,15 +1,32 @@
 @use '../../../../styles/_util' as *
   
-.reactModalContent.dark
-  .notification
-    @include scroolbarDark()
+
+.notification.dark
+  @include scroolbarDark()
+  border-color:$gray-700
+  background-color: $gray-800
+  color: $white
+
+  .notificationBox
+    background-color: $gray-700
     
 
-.reactModalContent.light
-  .notification
-    @include scroolbarDark()
-  
+.notification.light
+  @include scroolbarDark()
+  border-color: $gray-100
+  background-color: $white
+  box-shadow: 0px 0px 18px -6px rgba(0,0,0,0.25)
+  color: $black
 
+  .notificationBox
+    background-color: $white
+
+    &::before
+      background-color: $gray-500
+    button
+      svg
+        color: $gray-100
+        
 .notification.open
   width: 0
   height: 0
@@ -28,8 +45,7 @@
 
   position: absolute
   z-index: 3001
-  background-color: $gray-800
-  border: 1px solid $gray-700
+  border: 1px solid 
   border-radius: $default-radius
   padding: 1rem
 
@@ -57,10 +73,9 @@
         position: absolute
         width: 100%
         height: 1px
-        background-color: $gray-700
         bottom: -5px
 
-      h2
+      h3
         font-size: 1.1rem
         font-weight: 600
 
